[package]
name = "std-embedded-time"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com"]
version = "0.1.0"
edition = "2018"
categories = ["embedded", "date-and-time", "development-tools"]
keywords = ["embedded", "date", "time", "test", "embedded-time"]
license-file = "LICENSE"
description = "Implementation of embedded-time Clocks using std::time"

repository = "https://github.com/quartiq/std-embedded-time"
readme = "README.md"
documentation = "https://docs.rs/std-embedded-time"

[dependencies]
embedded-time = "0.12"
